--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,11 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: build
-        run: npm run deploy
+      #- name: deploy
+      #  run: 
 
       # Runs a set of commands using the runners shell
-      #- name: build
-      #  run: |
-      #    echo Add other actions to build,
-      #    echo test, and deploy your project.
+      #- name: deploy
+        run: |
+          npm install -D vuepress,
+          npm run deploy
