--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       #  run: 
 
       # Runs a set of commands using the runners shell
-      #- name: deploy
+      - name: deploy
         run: |
           npm install -D vuepress,
           npm run deploy
