--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: deploy
         run: |
-          npm install -D vuepress,
+          npm install -D vuepress
           npm run deploy
