--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
     branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -29,12 +29,17 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      #- name: deploy
-      #  run: 
-
-      # Runs a set of commands using the runners shell
-      - name: deploy
+      - name: install & build
         run: |
           yarn add -D vuepress
           yarn add vuepress-theme-antdocs
-          yarn run deploy
+
+      # Runs a set of commands using the runners shell
+      - name: deploy
+        run: yarn run docs:build
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: .vuepress/dist # The folder the action should deploy.
+          
+          
