--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,16 +26,19 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+        with:
+          persist-credentials: false
 
       # Runs a single command using the runners shell
-      - name: install & build
+      - name: Install & Build
         run: |
           yarn add -D vuepress
           yarn add vuepress-theme-antdocs
 
       # Runs a set of commands using the runners shell
-      - name: deploy
+      - name: Deploy
         run: yarn run docs:build
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
