--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skimit.cn",
-  "version": "2.3.14",
+  "version": "2.3.15",
   "description": "skimit服务器官网",
   "main": "index.js",
   "repository": "https://github.com/skimitmc/skimit.cn",
@@ -19,7 +19,6 @@
   },
   "scripts": {
     "docs:dev": "vuepress dev .",
-    "docs:build": "vuepress build .",
-    "deploy": "bash deploy.sh"
+    "docs:build": "vuepress build ."
   }
 }
