--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "skimit.cn",
-  "version": "2.5.3",
+  "version": "2.5.4",
   "description": "skimit服务器官网",
   "main": "index.js",
   "repository": "https://github.com/skimitmc/skimit.cn",
-  "author": "MAX_XiaoKui",
+  "author": "Glucy2",
   "license": "CC-BY-SA-4.0",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.2",
