--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "skimit.cn",
-  "version": "2.5.15",
-  "description": "skimit服务器官网",
-  "main": "index.js",
-  "repository": "https://github.com/skimitmc/skimit.cn",
-  "author": "Glucy2",
+  "name": "skimit-docs-zh",
+  "version": "2.0.0",
+  "description": "Chinese documents of skimit",
+  "repository": "https://github.com/skimitmc/skimit-docs-zh",
   "license": "CC-BY-SA-4.0",
-  "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.8.2",
-    "vue-cnzz-analytics": "^2.2.0",
-    "vuepress": "^1.8.2",
-    "vuepress-plugin-graysite": "^0.1.0"
-  },
-  "dependencies": {
-    "core-js": "3.15.2",
-    "scripts": "^0.1.0",
-    "vuepress-theme-antdocs": "^1.3.5"
-  },
+  "type": "module",
   "scripts": {
-    "docs:dev": "vuepress dev .",
-    "docs:build": "vuepress build ."
+    "docs:build": "vuepress build src",
+    "docs:clean-dev": "vuepress dev src --clean-cache",
+    "docs:dev": "vuepress dev src"
+  },
+  "devDependencies": {
+    "@vuepress/client": "2.0.0-beta.60",
+    "vue": "^3.2.45",
+    "vuepress": "2.0.0-beta.60",
+    "vuepress-theme-hope": "2.0.0-beta.149"
   }
 }
