--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "skimit-docs-zh",
+  "name": "skimit-homepage",
   "version": "3.0.0",
   "description": "Chinese documents of skimit",
-  "repository": "https://github.com/skimitmc/skimit-docs-zh",
+  "repository": "https://github.com/skimitmc/skimit-homepage",
   "license": "CC-BY-SA-4.0",
   "type": "module",
   "scripts": {
