--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "skimit-homepage",
-  "version": "3.0.0",
-  "description": "Chinese documents of skimit",
-  "repository": "https://github.com/skimitmc/skimit-homepage",
+  "name": "vltown",
+  "version": "1.0.0",
+  "description": "vltown",
+  "repository": "",
   "license": "CC-BY-SA-4.0",
   "type": "module",
   "scripts": {
